reduced slightly font size for links in login box to avoid a line wrap in linux
git-svn-id: svn+ssh://rubyforge.org/var/svn/biocatalogue/trunk@444 1acaf488-1b9d-4964-8077-0a2fdb83ef00

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -664,7 +664,7 @@ body.sidebar-right #login_box {
 	float: left;
 	position: relative;
 	top: -12px;
-	font-size: 0.9em;
+	font-size: 0.85em;
 	font-weight: bold;
 	white-space: nowrap;
 	text-decoration: underline;
@@ -674,6 +674,7 @@ body.sidebar-right #login_box {
 
 #sign_up {
 	clear: both;
+	font-size: 0.85em;
 }
 
 /* END Login box styles */
